# Quellgeist

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  0007-model-selection-qwen35-4b-vs-qwen3.md  2026-06-18-wave-0-spike.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Quell_Capability_+_Gemini_reference.ipynb  README.md  SECURITY.md  compose.yml  pyproject.toml  quellgeist-adr-log.md  quellgeist-brief.md  quellgeist-plan-rolling-wave.md  refactors.patch  scratch_run.py  wave4docs.patch  wave9resolutionpackaging.patch
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  eval.yml  evals.yml  judge-validation.yml  publish-mcp.yml  publish-pypi.yml  security.yml
demo/app/: auth.py  main.py
demo/chaos/: bad_deploy.py  fix_deploy.py  reset.py
docs/: architecture.md  ingestion.md  launch.md  publishing.md  quellgeist-adr-log.md  quellgeist-brief.md  quellgeist-plan-rolling-wave.md  quellgeist-v2-session-brief.md  quellgeist-v2-spec.md
docs/case-studies/: wave0-findings.md  wave2-first-numbers.md  wave3-judge-validation.md  wave3-reliability-rate.md  wave4-matrix-report.md  wave4-qwen-baseline.md  wave4-qwen-finetune.md
evals/: fabrication_check.py  judge.py  llm_judge.py  run_evals.py  validate_judge.py
evals/judge_validation/: labelled_cases.json
evals/matrix/: __init__.py  audits.py  report.py  run_cell.py
evals/scenarios/: build.py  generator.py
evals/scenarios/fixtures/: bad_deploy_0001.json  bad_deploy_0002.json  bad_deploy_0003.json  bad_deploy_0004.json  bad_deploy_0005.json  bad_deploy_0006.json  bad_deploy_0007.json  bad_deploy_0008.json  bad_deploy_0009.json  bad_deploy_0010.json  bad_deploy_0011.json  bad_deploy_0012.json  bad_deploy_0013.json  bad_deploy_0014.json  bad_deploy_0015.json  bad_deploy_0016.json  bad_deploy_0017.json  bad_deploy_0018.json  bad_deploy_0019.json  bad_deploy_0020.json  bad_deploy_0021.json  bad_deploy_0022.json  bad_deploy_0023.json  bad_deploy_0024.json  bad_deploy_0025.json  config_error_0001.json  config_error_0002.json  config_error_0003.json  config_error_0004.json  config_error_0005.json  config_error_0006.json  config_error_0007.json  config_error_0008.json  config_error_0009.json  config_error_0010.json  config_error_0011.json  config_error_0012.json  config_error_0013.json  config_error_0014.json  config_error_0015.json  (+25 more)
evals/scenarios/holdout/: hold_bad_deploy_01.json  hold_bad_deploy_02.json  hold_bad_deploy_03.json  hold_bad_deploy_04.json  hold_bad_deploy_05.json  hold_bad_deploy_06.json  hold_config_error_01.json  hold_config_error_02.json  hold_config_error_03.json  hold_config_error_04.json  hold_config_error_05.json  hold_config_error_06.json  hold_resource_exhaustion_01.json  hold_resource_exhaustion_02.json  hold_resource_exhaustion_03.json  hold_resource_exhaustion_04.json
evals/scenarios/oos/: README.md  oos_synth_0001.json  oos_synth_0002.json
evals/training/: __init__.py  build.py  contamination.py  probes.py  run_abstention_probe.py  sample_trajectories.jsonl  timing_probes.py  trajectories.py
evals/training/probes/abstention/: probe_bad_deploy_0002__time_shift.json  probe_bad_deploy_0003__weak_link.json  probe_bad_deploy_0004__no_incident.json  (+9 more)
finetune/: README.md  make_modelfile.py  prepare.py  render_report.json  rendering.py  requirements.txt  train.py
mcp/commits/: server.json
mcp/logs/: server.json
mcp/metrics/: server.json
src/quellgeist/: cli.py  clock.py  demo_incident.py
src/quellgeist/agent/: __init__.py  actions.py  citations.py  loop.py  prompts.py  providers.py  schema.py  timing_verifier.py  verifier.py
src/quellgeist/ingest/: __init__.py  normalize.py  sources.py
src/quellgeist/notify/: __init__.py  html.py  slack.py
src/quellgeist/observability/: __init__.py  context.py  logging.py  usage.py
src/quellgeist/orchestrator/: __init__.py  hint.py  investigate.py  resolution.py  review.py  tools_factory.py
src/quellgeist/output/: postmortem.py
src/quellgeist/servers/: commits_mcp.py  filters.py  logs_mcp.py  metrics_mcp.py  tools.py
src/quellgeist/service/: __init__.py  app.py  config.py  queue.py  security.py  snapshots.py
src/quellgeist/store/: __init__.py  dao.py  db.py  models.py
tests/: test_cli.py  test_cli_citations.py  test_ingest_cli.py
tests/agent/: test_actions.py  test_loop.py  test_providers.py  test_timing_verifier.py  test_verifier.py
tests/demo/: test_app_log.py  test_chaos_fix.py
tests/e2e/: test_e2e_real_incident.py
tests/evals/: test_fabrication_check.py  test_generator.py  test_llm_judge.py  test_matrix.py  test_oos_scaffold.py  test_runner.py  test_training.py  test_validate_judge.py
tests/frozen/: test_frozen_surface.py
tests/ingest/: test_ingest_normalize.py  test_ingest_sources.py
tests/observability/: test_observability.py
tests/orchestrator/: test_orchestrator.py  test_resolution.py
tests/output/: test_postmortem.py
tests/servers/: test_commits_mcp.py  test_filters.py  test_logs_mcp.py  test_metrics_mcp.py  test_tools_robustness.py
tests/service/: test_service.py
tests/store/: test_store.py
(+11 files in other folders)
