[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quellgeist"
version = "0.1.0"
description = "Model-agnostic AI agent for first-line production-incident triage; read-only evidence tools exposed as MCP servers."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Rajeev Shyam Kumar" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "mcp==1.28.0",
    "litellm",
    "pydantic>=2",
    "prometheus-client",
    "structlog",
]

[project.scripts]
quellgeist = "quellgeist.cli:main"

[dependency-groups]
dev = ["pytest", "ruff", "black", "pre-commit"]
# Security scanners (Wave 5, DR-0005). A separate group so the default `uv sync`
# stays lean; the `security` CI workflow installs it with `uv sync --group security`.
security = ["bandit", "pip-audit"]

[tool.hatch.build.targets.wheel]
packages = ["src/quellgeist"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]   # ruff lints (+ import sort); black formats
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
