[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quellgeist"
version = "0.1.0"
description = "Model-agnostic AI agent for first-line production-incident triage; read-only evidence tools exposed as MCP servers."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Rajeev Shyam Kumar" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "mcp==1.28.1",
    "litellm",
    "pydantic>=2",
    "prometheus-client",
    "structlog",
    # runtime egress: the Slack poster (notify/slack.py) posts via httpx, so it must ship
    # in the service image (`pip install .`), not only in the dev/test group (Wave 9, T9.2).
    "httpx",
]

[project.scripts]
quellgeist = "quellgeist.cli:main"
# stdio MCP servers, so each is runnable as `uvx --from quellgeist <script>` once
# the package is on PyPI (Wave 5, Task 4 — see docs/publishing.md).
quellgeist-logs-mcp = "quellgeist.servers.logs_mcp:main"
quellgeist-commits-mcp = "quellgeist.servers.commits_mcp:main"
quellgeist-metrics-mcp = "quellgeist.servers.metrics_mcp:main"

[dependency-groups]
# httpx is a runtime dep (above) — the Slack poster and FastAPI's TestClient both use it.
dev = ["pytest", "ruff", "black", "pre-commit"]
# Security scanners (Wave 5, DR-0005). A separate group so the default `uv sync`
# stays lean; the `security` CI workflow installs it with `uv sync --group security`.
security = ["bandit", "pip-audit"]

[tool.hatch.build.targets.wheel]
packages = ["src/quellgeist"]

[tool.hatch.build.targets.sdist]
# Keep the intentionally-insecure toy demo and the tests out of the PUBLISHED
# sdist, so it matches the wheel's surface (only the installable package + its
# metadata ship). The demo's simulated auth (demo/app/auth.py) should never land
# in a release artifact (security review, DR-0005).
exclude = ["/demo", "/tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]   # ruff lints (+ import sort); black formats
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
